plugins {
	id 'java-library'
	id 'maven-publish'
	id 'eclipse'
	id 'com.github.johnrengelman.shadow' version '7.1.2'
}

def ENV = System.getenv()

repositories {
	mavenCentral()
	maven {
		url "https://repo.spongepowered.org/maven/"
	}
	maven {
		url "https://maven.fabricmc.net/"
	}
}

sourceCompatibility = '17'
targetCompatibility = '17'

version = providerVersion
group = "me.cael"
archivesBaseName = "GrasscutterGameProvider"

dependencies {

	implementation group: 'org.jetbrains', name: 'intellij-fernflower', version: '1.2.1.16'
	implementation group: 'net.fabricmc', name: 'fabric-loader', version: "${project.loader_version}"
	implementation group: 'net.fabricmc', name: 'access-widener', version: '2.1.0'


	//mixin requirements:
	implementation 'org.spongepowered:mixin:' + mixinVersion
	implementation 'com.google.guava:guava:21.0'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
	implementation group: 'org.ow2.asm', name: 'asm', version: asmVersion
	implementation group: 'org.ow2.asm', name: 'asm-analysis', version: asmVersion
	implementation group: 'org.ow2.asm', name: 'asm-commons', version: asmVersion
	implementation group: 'org.ow2.asm', name: 'asm-tree', version: asmVersion
	implementation group: 'org.ow2.asm', name: 'asm-util', version: asmVersion

}

java {
	withSourcesJar()
}

jar {
	manifest {
		attributes(
			'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' '),
			'Specification-Version': 8.0,
			'Multi-Release': 'true'
		)
	}
}

sourceSets {
	main {
		java {
			srcDir 'src'
		}
	}
}
